--- a/Dissertation/part4.tex
+++ b/Dissertation/part4.tex
@@ -1,11 +1,11 @@
-\chapter{Диагоностика убегающих электронов на токамаке JET}
+\chapter{Диагностика убегающих электронов на токамаке JET}
 \label{sec:asdex}
 
-На токамаке JET функционирует развитая система диагностики гамма и жёсткого рентгеновского излучения. Спектры жёсткого рентгеновского излучения, измеренные с помощью детектороа NaI(Tl) с вертикальной линией обзоры были обработаны с помощью кода ``DeGaSum'', получены функции распределения убегающих электронов. Получена информация об эволюции пучка убегающих электронов. 
+На токамаке JET функционирует развитая система диагностики гамма и жёсткого рентгеновского излучения. Спектры жёсткого рентгеновского излучения, измеренные с помощью детектора NaI(Tl) с вертикальной линией обзоры были обработаны с помощью кода ``DeGaSum'', получены функции распределения убегающих электронов. Получена информация об эволюции пучка убегающих электронов. 
 
 % ==========================================================
 
-\section{Спектрометы жёсткого рентгеновского излучения на токамаке JET}
+\section{Спектрометры жёсткого рентгеновского излучения на токамаке JET}
 
 В настоящее JET имеет самую совершенную систему гамма-спектрометрии среди действующих токамаков (рисунок~\ref{fig:jetHxrDetectorsScheme})~\cite{Iliasova2022}. 
 
@@ -15,23 +15,23 @@
   \label{fig:jetHxrDetectorsScheme}
 \end{figure}
 
-На JET используются три спектрометра с вертикальной линей обзора. Первый --- сцинтилляционный, на основе LaBr3(Ce) $\varnothing 76,2 \times 152,4$~мм~\cite{Nocente2010}; второй --- полупроводниковый HPGe-спектрометр~\cite{Tardocchi2011}, обеспечивающий высокоэффективную регистрацию гамма-излучения с исключительно высоким энергетическим разрешением (2,4~кэВ на линии 1,333~МэВ), который, однако, имеет гораздо меньшую по сравнению с LaBr3(Ce) максимальную скорость счёта, третий --- спектрометр NaI(Tl) размером $\varnothing 5 \times 5$~дюймов, разрешение которого составляет 3\% на линии 4~МэВ~\cite{Tardocchi2008}. Эти три спектрометра расположены на тележке, и в каждом разряде может работать только один из них, остальные находятся вне линии видимости плазмы токамака. В коллиматор вертикального спектрометра установлен LiH-аттенюатор $\varnothing 30 \times 300$~мм, обогащенный изотопом ${}^6$Li, и более новый аттенюатор LiH с естественным соотношением изотопов лития длиной 400~мм~\cite{Murari2008}.
+На JET используются три спектрометра с вертикальной линей обзора плазмы. Эти спектрометры установлены в лаборатории над экспериментальным залом (Roof Lab). Первый из них --- сцинтилляционный, на основе LaBr3(Ce) $\varnothing 76,2 \times 152,4$~мм~\cite{Nocente2010}; второй --- полупроводниковый HPGe-спектрометр~\cite{Tardocchi2011}, обеспечивающий высокоэффективную регистрацию гамма-излучения с исключительно высоким энергетическим разрешением (2,4~кэВ на линии 1,333~МэВ), который, однако, имеет гораздо меньшую по сравнению с LaBr3(Ce) максимальную скорость счёта, третий --- спектрометр NaI(Tl) размером $\varnothing 5 \times 5$~дюймов, разрешение которого составляет 3\% на линии 4~МэВ~\cite{Tardocchi2008}. Эти три спектрометра расположены на подвижной платформе, установленной над коллиматором, организованном в потолке экспериментального зала. В каждом отдельном разряде может работать только один из них, остальные находятся вне линии видимости плазмы токамака. В коллиматор вертикального спектрометра установлен LiH-аттенюатор $\varnothing 30 \times 300$~мм, обогащенный изотопом ${}^6$Li, и более новый аттенюатор LiH с естественным соотношением изотопов лития длиной 400~мм~\cite{Murari2008}.
 
-Так же на JET имеется и спектрометр  LaBr3(Ce) ($\varnothing 76,2 \times 152,4$~мм)~\cite{Nocente2021} с тангенциальной линией обзора, который находится позади LiH-аттенюатора; он заменил более старый спектрометр на основе кристалла BGO с полиэтиленовым аттенюатором.~\cite{Curuia2017}
+Так же на JET имеется и спектрометр  LaBr3(Ce) ($\varnothing 76,2 \times 152,4$~мм)~\cite{Nocente2021} с тангенциальной линией обзора камеры токамака, который находится позади LiH-аттенюатора. Он заменил более старый спектрометр на основе кристалла BGO с полиэтиленовым аттенюатором.~\cite{Curuia2017} Линия обзора этого спектрометра проходит примерно на 30 см ниже экваториальной плоскости плазмы. 
 
-Сигнал с обоих спектрометров LaBr3(Ce), с вертикальной и с тангенциальной линиями обзора, записывается в сегментной моде~\cite{Pereira2008,Pereira2011}; при этом сохраняются только части осциллограммы, превышающие некоторый заданный порог, и их окрестности. Для оцифровки используется 14-битное АЦП с частотой 400~МГц. 
+Сигнал с обоих спектрометров LaBr3(Ce), с вертикальной и с тангенциальной линиями обзора, записывается в сегментной моде~\cite{Pereira2008,Pereira2011}. При таком способе записи сохраняются только части осциллограммы, превышающие некоторый заданный порог, и их окрестности. Для оцифровки сигнала используется 14-битное АЦП с частотой 400~МГц. 
 
 %Сохранённые осциллограммы записываются в систему сбора и обработки данных CODAS, откуда могут быть впоследствии извлечены и обработаны, например, с помощью алгоритмов, описанных в главах~\ref{sec:signalProcessing} и \ref{sec:deconvolution}. 
 
-В дополнение к этим спектрометрам для получения двумерных профилей гамма-излучения из плазмы используется гамма-камера, состоящая из 19~компактных детекторов с 10~горизонтальными и 9~вертикальными линиями обзора (рисунок~\ref{fig:jetHxrDetectorsScheme}, справа). Компактные детекторы гамма-камеры изготовлены из кристаллов LaBr3(Ce) $\varnothing 25 \times 17$~мм~\cite{Rigamonti2018}. Выходной сигнал от каждого детектора оцифровывается 13-битном АЦП со скоростью 200~МГц~\cite{Fernandes2018}.
+В дополнение к этим спектрометрам для получения двумерных профилей гамма-излучения из плазмы используется гамма-камера, состоящая из 19~компактных детекторов с 10~горизонтальными и 9~вертикальными линиями обзора (рисунок~\ref{fig:jetHxrDetectorsScheme}, справа). Компактные детекторы гамма-камеры изготовлены из кристаллов LaBr3(Ce) $\varnothing 25 \times 17$~мм~\cite{Rigamonti2018}. Выходной сигнал от каждого детектора оцифровывается 13-битном АЦП с частотой 200~МГц~\cite{Fernandes2018}.
 
-Все диагностики токамака JET сохраняют результаты измерений в системе CODAS~\cite{Jones1986}. Для обработки данных в компьютерный код DeGaSum была добавлена возможность загрузки данных из системы CODAS со всех вышеперечисленных гамма-диагностик. Для детекторов на основе BGO и HPGe могут быть загружены только спектры, созданные в результате обработки с помощью программно-аппаратных средств самих диагностик. Для детекторов NaI(Tl), LaBr3(Ce) доступны исходные измеренные осциллограммы, обработка которых с помощью продвинутых алгоритмов, описанных в главе~\ref{sec:signalProcessing}, может позволить получить дополнительную полезную информацию. Полученные спектры жёсткого рентгеновского излучения могут быть обработаны с помощью алгоритмов, описанных в главе~\ref{sec:deconvolution}. 
+Все диагностики токамака JET сохраняют результаты измерений в системе CODAS~\cite{Jones1986}. Для обработки данных в компьютерный код DeGaSum была добавлена возможность загрузки данных из системы CODAS со всех вышеперечисленных гамма-спектрометрических систем. Для детекторов на основе BGO и HPGe могут быть загружены только спектры, созданные в результате обработки исходного сигнала с помощью программно-аппаратных средств самих спектрометров. Для детекторов NaI(Tl), LaBr3(Ce) доступны исходные измеренные осциллограммы, обработка которых с помощью продвинутых алгоритмов, описанных в главе~\ref{sec:signalProcessing}, может позволить получить дополнительную полезную информацию. Измеренные в эксперименте спектры жёсткого рентгеновского излучения могут быть обработаны с помощью алгоритмов, описанных в главе~\ref{sec:deconvolution}. 
 
 % ==========================================================
 
 \section{Восстановление функции распределения убегающих электронов на токамаке JET}
 
-Для восстановления функций распределения были предварительно рассчитаны функции отклика детектора и функции генерации убегающими электронами жёсткого рентгеновского излучения. Расчёты были выполнены А.~Е.~Шевелевым с помощью кода MCNP, примеры полученных функций показаны на рисунке~\ref{fig:jetGenerationFunctions}. 
+Для восстановления функций распределения были предварительно рассчитаны функции отклика детектора на моноэнергетическое гамма-излучение в энергетическом диапазоне 0.1--30~МэВ с шагом 0.1 МэВ, а также функции и функции генерации убегающими электронами жёсткого рентгеновского излучения в этом энергетическом диапазоне. Расчёты были выполнены А.~Е.~Шевелевым с помощью кода~MCNP, примеры полученных функций показаны на рисунке~\ref{fig:jetGenerationFunctions}. 
 
 \begin{figure}[ht!]
   \centerfloat{ \includegraphics[width=0.85\linewidth]{jetGenerationFunctions} }
@@ -54,12 +54,12 @@
     \begin{minipage}[b][][b]{0.42\linewidth}\centering
         \includegraphics[width=0.98\linewidth]{jetRunawayEdf82715_t3} \\ в)
     \end{minipage}
-    \caption{ Разряд на токамаке JET №~82715, результаты обработки данных с детектора NaI(Tl). Верхние изображения, чёрные точки --- зарегистрированный спектр жёсткого рентгеновского излучения, нижние изображения, красная кривая --- восстановленная функция распределения убегающих электронов; верхние изображения; верхние изображения, синяя кривая --- спектр излучения, полученный в результате свёртки восстановленной функции распределения. (а) --- временное окно 41,1--42,4~с, (б) --- временное окно 42.4--44.6~с, (в) --- временное окно 44.6--48.6~с.~\cite{Shevelev2013}. }
+    \caption{ Результаты обработки данных с детектора Nal(Tl), полученных в разряде на токамаке JET №~82715: (а) --- временное окно 41,1--42,4~с, (б) --- временное окно 42.4--44.6~с, (в) --- временное окно 44.6--48.6~с. Верхние изображения: чёрные точки --- зарегистрированный спектр жёсткого рентгеновского излучения, синяя кривая --- спектр излучения, полученный в результате свёртки восстановленной функции распределения; нижние изображения: красная кривая --- восстановленная функция распределения убегающих электронов. ~\cite{Shevelev2013}. }
     \label{fig:jetRunawayEdf82715}
 \end{figure}
 
 
-Мы не ставили целью теоретическое объяснение полученных результатов наших измерений. Разработанная методика позволяет анализировать процессы генерации и эволюции пучка убегающих электронов и проводить верификацию теоретических моделей. Полученная нами в рассматриваемом разряде форма функции распределения может быть связана с тем, что детектор имеет коллимированую вертикальную линию обзора и может регистрировать излучение только из центральной части плазменного шнура.~\cite{Shevelev2013} Пучок убегающих электронов может иметь некоторое пространственное распределение, зависящее от энергии; на это распределение может влиять, например, эффект смещения орбиты пучка~\cite{Knoepfel1979}. Также форма распределения электронов может быть связана с особенностями генерации электронов за счёт первичного и вторичного механизма.~\cite{Helander2002}.
+Мы не ставили целью теоретическое объяснение полученных результатов наших измерений. Разработанная методика позволяет анализировать процессы генерации и эволюции пучка убегающих электронов и проводить верификацию теоретических моделей. Полученная нами в рассматриваемом разряде форма функции распределения может быть связана с тем, что детектор имеет коллимированную вертикальную линию обзора и может регистрировать излучение только из центральной части плазменного шнура.~\cite{Shevelev2013} Пучок убегающих электронов может иметь пространственное распределение, зависящее от энергии; на это распределение может влиять, например, эффект смещения орбиты пучка~\cite{Knoepfel1979}. Также форма энергетического распределения электронов может быть связана с особенностями генерации электронов за счёт первичного и вторичного механизма.~\cite{Helander2002}.
 
 Ток, создаваемый убегающими электронами с энергией более 2~МэВ, был получен путем интегрирования потока электронов, пересекающего область обзора спектрометра. Зависимость тока убегающих электронов от времени показана на рисунке~\ref{fig:jetPulseParams82715}~(d). Значения тока плазмы и усредненной по линии плотности электронов представлены на рисунках~\ref{fig:jetPulseParams82715}~(a) и (b) соответственно. Зависимость скорости счёта гамма-спектрометра NaI(Tl) от времени показана на рисунке~\ref{fig:jetPulseParams82715}~(c). На рисунке~\ref{fig:jetPulseTomography82715} представлена томографическая реконструкция интенсивности излучения в камере токамака, полученная с помощью гамма-камеры.
 
@@ -72,13 +72,13 @@
     \begin{minipage}[b][][b]{0.48\linewidth}\centering
         \includegraphics[width=0.95\linewidth]{jetPulseTomography82715_t2} \\ б)
     \end{minipage}
-    \caption{ Томографическая реконструкция пространственного распределения жёсткого рентгеновского излучения в камере токамака JET в ходе разряда №~82715: (а) --- во временном интервале 41.1--41.8~c, (б) --- во временном интервале 42.4--43.4~с.~\cite{Shevelev2013a}. }
+    \caption{ Томографическая реконструкция пространственного распределения жёсткого рентгеновского излучения в камере токамака JET в разряде №~82715: (а) --- во временном интервале 41.1--41.8~c, (б) --- во временном интервале 42.4--43.4~с.~\cite{Shevelev2013a}. }
     \label{fig:jetPulseTomography82715}
 \end{figure}
 
 \begin{figure}[ht!]
   \centerfloat{ \includegraphics[width=0.75\linewidth]{jetPulseParams82715} }
-  \caption{ (a) --- ток по плазме в разряде №~82715 на токамаке JET ($I_p = 1,7$~МА, $B_t = 2$~Тл, $T_e = 1,8$~кэВ, $P_{NBI} = 2,3$~МВт); (b) ---  плотность электронов; (c) ---  интенсивность жёсткого рентгеновского излучения; (d) --- восстановленный ток убегающих электронов в видимом для вертикального спектрометра объёме плазмы, учтены только электроны с энергией больше чем 2~МэВ.~\cite{Shevelev2013} }
+  \caption{ Сигналы, измеренные в разряде №~82715 на токамаке JET ($I_p = 1,7$~МА, $B_t = 2$~Тл, $T_e = 1,8$~кэВ, $P_{NBI} = 2,3$~МВт): (a) --- ток плазмы; (b) ---  плотность электронов; (c) ---  интенсивность жёсткого рентгеновского излучения; (d) --- восстановленный ток убегающих электронов в видимом для вертикального спектрометра объёме плазмы (учтены только электроны с энергией выше 2~МэВ).~\cite{Shevelev2013} }
   \label{fig:jetPulseParams82715}
 \end{figure}
 
@@ -88,7 +88,7 @@
 \FloatBarrier
 \section{Убегающие электроны в экспериментах с ИТЭР-подобной стенкой на токамаке JET}
 
-Иногда убегающие электроны регистрировались не только в фазе роста тока и фазе окончания разряда, но и на переходных стадиях пробоя разряда в токамаке JET с ИТЭР-подобной стенкой (JET-ILW, ITER-like wall). Генерация убегающих электронов во время стадии плато в ходе разрядов на токамаке JET представляют собой предмет повышенного интереса, в первую очередь из-за редкой возможности изучения возникновения, роста и причин гибели релятивистских электронов.~\cite{Granetz2014} Ниже в этом разделе представлены результаты исследования параметров убегающих электронов, генерируемых и регистрируемых во время квазистационарной стадии разряда JET-ILW после значительного снижения плотности плазмы. Эволюция измеряемых параметров плазмы (плотность, температура электронов, напряжение контура, ток плазмы) была численно обработана в рамках традиционной теории генерации убегающих электронов.~\cite{Plyusnin2015}
+Иногда убегающие электроны регистрировались не только в фазе роста тока и фазе окончания разряда, но и на переходных стадиях пробоя разряда в токамаке JET с ИТЭР-подобной стенкой (JET-ILW, ITER-like wall~\cite{Matthews2011}). Генерация убегающих электронов во время стадии плато в ходе разрядов на токамаке JET представляют собой предмет повышенного интереса, в первую очередь из-за редкой возможности изучения возникновения, роста и причин гибели релятивистских электронов.~\cite{Granetz2014} Ниже в этом разделе представлены результаты исследования параметров убегающих электронов, генерируемых и регистрируемых во время квазистационарной стадии разряда JET-ILW после значительного снижения плотности плазмы. Эволюция измеряемых параметров плазмы (плотность, температура электронов, напряжение контура, ток плазмы) была численно обработана в рамках традиционной теории генерации убегающих электронов.~\cite{Plyusnin2015}
 
 Во время стадии плато обычного разряда на токамаке JET-ILW №~86078 внезапная потеря контроля над впуском рабочего газа привела к снижению плотности плазмы до чрезвычайно низкого значения: $ <n_e> \le 2.0\cdot10^{18}$~м${}^{-3}$, начиная с отметки времени примерно $t = 18.4$~с (рисунок~\ref{fig:jetPulseParams86078}). Возникший режим работы токамака с низкой плотностью сохранялся в течении приблизительно 8~секунд. Нейтронная диагностика зафиксировала практически полное исчезновение выхода термоядерных нейтронов из дейтериевой плазмы после этого уменьшения плотности. Плазменный ток во время этой стадии низкой плотности поддерживался почти постоянным ($I_{pl} \approx 1.8$~МА) до прекращения разряда. Измеренное напряжение обхода в начале фазы снижения плотности составило $V_{loop} = 0.65$~В, что соответствует $<T_e> = 1,5$~кэВ, если проводить вычисление сопротивления по классическому механизму с неоклассической поправкой на долю захваченных частиц. Полученное значение $<T_e>$ очень близко к величине температуры электронов, предоставляемым другими диагностиками. В фазе низкой плотности средняя дрейфовая скорость увеличивается до $u_0 = (I_{pl}/\pi a_{pl}^2 )/(e n_e) \le 3,0\cdot10^6$~м/с, где $a_{pl}$ --- радиус плазменного шнура, полученный с помощью EFIT, а $<n_e>$ --- измеренная концентрация электронов в плазме. Большая дрейфовая скорость $u_0 \approx 0.1 \times v_{Te}$ ведёт к появлению существенной асимметрии у  функции распределения электронов:
 \begin{equation*}
@@ -106,7 +106,7 @@
 
 \begin{figure}[ht!]
   \centerfloat{ \includegraphics[width=0.85\linewidth]{jetPulseAlphaBeta86078} }
-  \caption{ Разряд №~86078 на токамаке JET. Эволюция параметров $\alpha$ и $\beta$ от времени.~\cite{Plyusnin2015} }
+  \caption{ Эволюция параметров $\alpha$ и $\beta$ в разряде №~86078 на токамаке JET.~\cite{Plyusnin2015} }
   \label{fig:jetPulseAlphaBeta86078}
 \end{figure}
 
@@ -121,7 +121,7 @@
 
 \begin{figure}[ht!]
   \centerfloat{ \includegraphics[width=0.65\linewidth]{jetPulseCriticalEnergy86078} }
-  \caption{ Разряд №~86078 на токамаке JET. Эволюция критической энергии (ось слева, чёрные точки) и скорости генерации (ось справа, синяя кривая) от времени.~\cite{Plyusnin2015} }
+  \caption{ Эволюция критической энергии (ось слева, чёрные точки) и скорости генерации (ось справа, синяя кривая) от времени в разряде №~86078 на токамаке JET.~\cite{Plyusnin2015} }
   \label{fig:jetPulseCriticalEnergy86078}
 \end{figure}
 
@@ -144,23 +144,76 @@
 
 \begin{figure}[ht!]
   \centerfloat{ \includegraphics[width=0.55\linewidth]{jetPulseHxrTomography86078} }
-  \caption{ Разряд №~86078 на токамаке JET. Томографическая реконструкция эмиссии жёсткого рентгеновского излучения по данным с гамма-камеры.~\cite{Plyusnin2015} }
+  \caption{ Разряд №~86078 на токамаке~JET. Томографическая реконструкция эмиссии жёсткого рентгеновского излучения по данным с гамма-камеры.~\cite{Plyusnin2015} }
   \label{fig:jetPulseHxrTomography86078}
 \end{figure}
 
+Как можно видеть на рисунке~\ref{fig:jetPulseHxrTomography86078}, пучок убегающих электронов локализован несколько ниже магнитной оси и смещен в сторону слабого поля.
+
+
+% ==========================================================
+
+\FloatBarrier
+\section{Использование спектрометров жёсткого рентгеновского излучения в разрядах JET с массивной газовой инжекцией}
+
+Для изучения поведения пучка убегающих электронов на токамаке JET проводилось некоторое количество серий экспериментов. Убегающие электроны регулярно наблюдались во время срывов разрядов JET с конфигурацией углеродной стенки (JET-C).~\cite{Grill2002} В более поздних специализированных экспериментах пучки длительностью до 50~мс были получены путем впрыска аргона с использованием стандартных газовых клапанов~\cite{Plyusnin2006} или массивного впрыска тяжелых газов (Massive Gas Injection, MGI) с помощью быстрого предохранительного клапана DMV (Disruption Mitigation Valve). Было замечено, что режим плато убегающих электронов различается в зависимости от способа его создания. Убегающие пучки, которые были вызваны медленным впрыском газа, имели тенденцию иметь устойчивый ток убегающих электронов почти без эмиссии жёсткого рентгена или фотонейтронов до окончательного падения тока. С другой стороны, пучки убегающих электронов, созданные массивным впрыском аргона, показали медленное падение тока плазмы и устойчивую эмиссию нейтронов и жёсткого рентгеновского излучения на протяжении всей продолжительности плато с окончательным падением тока в конце. Такое поведение объясняется взаимодействием убегающего пучка с газом от массивной инжекции~\cite{Riccardo2010}.
+
+В экспериментах с убегающими электронами активно использовались вертикальные и тангенциальный гамма-спектрометры, которые сигнализировали о формировании в плазме высокоэнергетического пучка электронов и давали информацию эволюции интенсивности и энергетического распределения жесткого рентгеновского излучения.~\cite{Reux2015_Mit}
+
+На рисунке~\ref{fig:jetRunawayHxr79416} показан ток плазмы и эволюция интенсивности жёсткого рентгеновского излучения, зарегистрированного спектрометром с вертикальной линией обзора плазмы на токамаке JET, в различных режимах генерации пучка убегающих электронов. В разрядах №~79416, №~79418, №~79422 плато тока убегающих электронов формировалось вследствие массивной газовой инжекции, в то время как в разряде №~79424 --- после медленного газонапуска. При измерениях жёсткого рентгеновского излучения во время плато убегающих электронов спектрометр BGO с вертикальной линией обзора зафиксировал появление второго пика на графике интенсивности излучения, который нарастает с увеличением продолжительности плато в разрядах с массивной инжекцией аргона. Наблюдаемые интенсивные потоки жёсткого рентгена связаны с взаимодействием пучка убегающих электронов с тяжелым газом во время массивной газовой инжекции. В разряде с медленным газонапуском интенсивное рентгеновское излучение не наблюдалось (разряд №~79424).~\cite{Plyusnin2012Fec}
+
+\begin{figure}[ht!]
+  \centerfloat{ \includegraphics[width=0.65\linewidth]{jetRunawayHxr79416} }
+  \caption{Сигналы разрядов на токамаке~JET с генерацией пучка убегающих электронов, вызванной массивной газовой инжекцией (разряды №~79416, 79418, 79422) и медленным газонапуском (разряд №~79424): ток плазмы (верхний рисунок) и загрузка вертикального BGO гамма-спектрометра (нижний рисунок).~\cite{Plyusnin2012Fec} }
+  \label{fig:jetRunawayHxr79416}
+\end{figure}
+
+Восстановление энергетических распределений убегающих электронов по зарегистрированному спектрометрами жесткому рентгеновскому излучению проводилось с использованием кода DeGaSum. Для этого предварительно были рассчитаны функции отклика спектрометров и функции генерации тормозного излучения при взаимодействии ускоренных электронов с аргоном. На рисунке~\ref{fig:jetRunawayEdf79422} показан спектр жёсткого рентгеновского излучения, зарегистрированный спектрометром BGO с вертикальной линией обзора плазмы и энергетическое распределение электронов в видимом для детектора плазменном объеме, восстановленное с помощью кода DeGaSum.~\cite{Plyusnin2012Fec}
+
+\begin{figure}[ht!]
+  \centerfloat{ \includegraphics[width=0.65\linewidth]{jetRunawayEdf79422} }
+  \caption{ Зарегистрированный спектр жёсткого рентгеновского излучения (черные точки) и восстановленное распределение убегающих электронов (красная линия) в разряде JET-C №~79422 с массивной инжекцией аргона.~\cite{Plyusnin2012Fec} }
+  \label{fig:jetRunawayEdf79422}
+\end{figure}
+
+Измерения с помощью гамма-камеры позволили построить двухмерный профили жёсткого рентгеновского излучения из плазмы в разрядах с MGI. На рисунке~\ref{fig:jetPulseTomography79415} показаны профили источника жёсткого рентгена в разряде JET №~79415 с MGI. На левом рисунке видно, как минимум, две зоны локализации источника излучения: пикированный источник в центральной области плазмы и кольцеобразный источник на периферии. Следует отметить, что на профиль источника излучения влияет не только распределение пучка убегающих электронов, но и пространственное распределение плотности инжектированной примеси в плазме токамака.~\cite{Shevelev2014}
+
+\begin{figure}[ht!]
+  \centerfloat{ \includegraphics[width=0.85\linewidth]{jetPulseTomography79415} }
+  \caption{Томографические реконструкции профилей жёсткого рентгеновского излучения в разряде на токамаке JET №~79415 с MGI в моменты времени 22.11~с (слева) и 22.12~с (справа).~\cite{Shevelev2014} }
+  \label{fig:jetPulseTomography79415}
+\end{figure}
+
+После установки ITER-подобной стенки на JET (JET-ILW) с вольфрамовым дивертором и бериллиевой первой стенкой камеры генерация убегающих электронов во время спонтанных срывов значительно снизилась. Из более чем 7000~разрядов первых кампаний JET-ILW только два разряда показали присутствие убегающих электронов во время нарастания тока при очень низкой плотности плазмы после отказа системы подачи газа. Этот эффект был объяснен тем, что в срывах JET-ILW излучение плазмы значительно ниже, чем для JET-C, из-за отсутствия углерода как излучающей примеси, что приводит к более медленному гашению тока и, следовательно, к меньшему ускоряющему электрическому полю, что приводит к меньшему количеству убегающих электронов.~\cite{Reux2015_Mit}
+
+В экспериментах с плазмой на JET-ILW было продолжено изучение влияния инжекции большого количества материала в плазму на формирование пучков убегающих электронов. Исследования проводились как с массивной инжекцией тяжелых инертных газов~\cite{Reux2015_Mit,Reux2015}, так и с инжекцией пеллет дейтерия~\cite{Reux2022}. Спектрометры и детекторы гамма-камеры, как и в экспериментах JET-C, использовались для мониторинга появления пучков электронов по регистрируемому жесткому рентгеновскому излучению, для восстановления энергетического и пространственного распределения. На рисунке~\ref{fig:jetRunawayEdfReux} приведены два примера функции распределения по энергии для пучка убегающих электронов 150~кА (доля аргона 40\%, $B_t$~=~3,0~Тл) и пучка 580~кА (доля аргона 100\%, $B_t$~=~2,4 Тл). Как можно видеть, убегающие электронов во время срывов ускоряются до 20~МэВ, что типично для больших токамаков. Было отмечено, что максимальная энергия убегающих электронов растет с увеличением общего тока убегающих электронов, но достигает предела в районе 20~МэВ при токах больше 150~кА.~\cite{Reux2015_Mit}
+
+\begin{figure}[ht!]
+  \centerfloat{ \includegraphics[width=0.85\linewidth]{jetRunawayEdfReux} }
+  \caption{Примеры двух распределений убегающих электронов, восстановленных кодом DeGaSum. Функции распределения интегрированны по всей длительности формирования пучка убегающих электронов. Слева --- диверторная конфигурация плазмы, короткий пучок, ток 150~кА, справа --- пучок при лимитерной конфигурации, ток 580~кА.~\cite{Reux2015_Mit} }
+  \label{fig:jetRunawayEdfReux}
+\end{figure}
+
+Пучки убегающих электронов, созданные массивной инжекцией газа, создают плотную фоновую плазму за счет столкновений между релятивистскими электронами и инжектированными нейтральными частицами. Эта плазма может достигать плотности порядка $10^{19}$~м${}^{-3}$ даже вдали от пучка убегающих электронов и заполняет большую часть вакуумной камеры. 
+
+Были предприняты попытки смягчения эффекта убегания, но они оказались успешными, если нейтральный дейтерий вводится до теплового гашения разряда. Ассимиляция газа падает после большого перемешивания, происходящего во время МГД-фазы теплового гашения, и больше не может предотвратить неконтролируемое ускорение, в котором преобладает лавинная, а не только первичная дрейсеровская генерация. Смягчение последствий убегания после формирования пучка оказалось безуспешным на JET при введении от 663 до 4340~Па·м${}^{3}$ аргона, криптона или ксенона. Ни на один из параметров убегания (ток, продолжительность, мощность эмиссии жёсткого рентгена и полного излучения, смещение пучка) не было замечено какого-либо значительного влияния повторной инжекции. Отсутствие эффекта второй инжекции объясняется очень плохим проникновением газа в область пучка убегающих электронов. Такое плохое перемешивание, вероятно, связано с эффектом экранирования холодной фоновой плазмой, находящейся в режиме, непроницаемом для нейтральных частиц.~\cite{Reux2015_Mit}
 
 % ==========================================================
 
 \FloatBarrier
 \section{Выводы к главе 4}
 
-На токамаке JET работают в настоящее время и работали в прошлом множество диагностик жёсткого рентгеновского излучения на основе сцинтилляционных кристаллов NaI(Tl), BGO, LaBr3(Ce), а так же полупроводникового детектора HPGe высокого разрешения. Отдельно стоит упомянуть гамма-камеру, с помощью которой возможно выполнять томографическую реконструкцию двумерного профиля источника рентгеновского излучения в плазме. Результаты измерения записываются в систему хранения данных CODAS, из которой они впоследствии могут быть извлечены и обработаны. 
+На токамаке JET работают в настоящее время и работали в прошлом некоторое количество диагностических систем жёсткого рентгеновского излучения на основе сцинтилляционных детекторов NaI(Tl), BGO, LaBr3(Ce), а также полупроводникового детектора HPGe высокого разрешения. Отдельно стоит упомянуть гамма-камеру, с помощью которой возможно выполнять томографическую реконструкцию двумерного профиля источника рентгеновского излучения в плазме. Результаты измерения записываются в систему хранения данных CODAS, из которой они впоследствии могут быть извлечены и обработаны. 
 
-С помощью компьютерного кода DeGaSum была проведена обработка результатов измерений жёсткого рентгеновского излучения, сгенерированного убегающими электронами в плазме. Для этого с помощью компьютерного кода MCNP были рассчитаны аппаратные функции детекторов BGO и NaI(Tl), а так же функции генерации убегающими электронами жёсткого рентгеновского излучения. Затем была отработана процедура восстановления функции распределения убегающих электронов по энергии. В том числе показана возможность восстановления функции распределения в выбранном временном окне, таким образом возможно отследить эволюцию функции распределения во времени. Приведены результаты такого восстановления для нескольких разрядов. 
+С помощью компьютерного кода DeGaSum была проведена обработка результатов измерений жёсткого рентгеновского излучения, сгенерированного убегающими электронами в плазме. Для этого с помощью компьютерного кода MCNP были рассчитаны аппаратные функции детекторов BGO и NaI(Tl), а также функции генерации убегающими электронами жёсткого рентгеновского излучения. Затем была отработана процедура восстановления функции распределения убегающих электронов по энергии. В том числе показана возможность восстановления функции распределения в выбранном временном окне, таким образом возможно отследить эволюцию функции распределения во времени. Приведены результаты такого восстановления для нескольких разрядов. 
 
-Так, в разряда №~82715 энергия убегающих электронов достигала величины 13~МэВ. В ходе эволюции разряда со временем увеличивается относительная доля электронов с энергиями от 8 до 13~МэВ, видимо в результате ускорения электрическим полем. Во временном окне 44.6 -- 48.6~с видно наличие двух фракций электронов --- с энергиями 8--12~МэВ и 2--6~МэВ. Это может быть связано с особенностями генерации электронов по первичному и вторичному (лавинному) механизмом, а так же с тем, как соотносится пространственное распределение убегающих электронов и область видимости спектрометра.  
+В нескольких разрядах спектрометрами жёсткого рентгеновского излучения было зарегистрировано рождение пучка убегающих электронов на стадии подъема тока при низкой электронной плотности плазмы, образовавшейся вследствие частичного отказа систем газонапуска. Так, в разряда №~82715 энергия убегающих электронов достигала величины 13~МэВ. В ходе эволюции разряда со временем увеличивается относительная доля электронов с энергиями от 8 до 13~МэВ, видимо в результате ускорения электрическим полем. Во временном окне 44.6 -- 48.6~с видно наличие двух фракций электронов --- с энергиями 8--12~МэВ и 2--6~МэВ. Это может быть связано с особенностями генерации электронов по первичному и вторичному (лавинному) механизмом, а так же с тем, как соотносится пространственное распределение убегающих электронов и область видимости спектрометра.  
 
 Были рассмотрены и обработаны результаты измерения жёсткого рентгеновского излучения в разряде №~86078 на токамаке JET в ходе эксперимента с ИТЭР-подобной стенкой. В этом разряде внезапная потеря контроля над впуском рабочего газа привела к снижению плотности плазмы. Было исследовано поведение пучка убегающих электронов во время данного разряда; максимальная энергия убегающих электронов составила 7~МэВ. Была восстановлена функция распределения убегающих электронов.
+
+Спектрометры жесткого рентгеновского излучения и гамма-камера активно используется в исследованиях влияния массивной инжекции в плазму тяжелых инертных газов и дейтерия на формирование пучка убегающих электронов. С помощью сцинтилляционных спектрометров наблюдалось развитие пучков после инжекций материалов в плазму. Максимальная энергия убегающих электронов при этом достигала 20~МэВ, что ожидаемо для больших токамаков. Было отмечено, что максимальная энергия растет с увеличением общего тока убегающих электронов, но при токах больше 150~кА достигает предела в районе 20~МэВ.
+
+Попытки смягчения эффекта убегания оказались успешными, если нейтральный дейтерий вводился до стадии теплового гашения разряда. Если на этой стадии в плазме развивался пучок убегающих электронов, то повторная массивная инжекция тяжелых газов не приводила к заметному влиянию на формирование пучка.  Результаты экспериментов на JET-C и JET-ILW в целом подтверждали вывод том, что физика убегающих электронов аналогична как для камер с металлической, так и углеродной стенкой, и что следует пытаться подавить убегающие электроны до того, как пучок полностью сформируется.
 
 % ==========================================================
 
