--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -350,6 +350,14 @@
   authorconf = {true},
 }
 
+@inproceedings{Plyusnin2012Fec,
+  author = {V.V. Plyusnin and V.G. Kiptily and B. Bazylev and A.E. Shevelev and E.M. Khilkevitch and J. Mlynar and M. Lehnen and G. Arnoux and A. Huber and S. Jachmich and V. Riccardo and U. Kruezi and B.Alper and R.C. Pereira and A. Fernandes and C. Reux and P.C. de Vries and T.C. Hender and JET EFDA contributors },
+  title = {Latest Progress in Studies of Runaway Electrons in JET},
+  booktitle = {2012 24th IAEA Fusion Energy Conference, San Diego, USA, 8th–13th Oct},
+  year = {2012},
+  url = {http://www-naweb.iaea.org/napc/physics/FEC/FEC2012/papers/201_EXP805.pdf},
+  authorconf = {true}
+}
 
 %
 %@inproceedings{confbib1,
