--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -1239,10 +1239,62 @@
   author = { Скрекель, О. М. and Бахарев, Н. Н. and Варфоломеев, В.И. and Гусев. В. К. and Ильясова, М. В. and Тельнова. А. Ю. and Хилькевич, Е. М. and Шевелев, А. Е. },
   title = { Калибровка нейтронных счетчиков токамака Глобус-М2 },
   journal = { Журнал технической физики },
-  year = { 2021 },
+  year = {2021},
   volume = { 92 },
   issue = {1},
   pages = {32-35}
+}
+
+@article{Grill2002,
+  doi = {10.1088/0029-5515/42/8/312},
+  url = {https://dx.doi.org/10.1088/0029-5515/42/8/312},
+  year = {2002},
+  month = {8},
+  volume = {42},
+  number = {8},
+  pages = {1039},
+  author = {R.D. Gill and  B. Alper and  M. de Baar and  T.C. Hender and  M.F. Johnson and  V. Riccardo and  contributors to the EFDA-JET Workprogramme},
+  title = {Behaviour of disruption generated runaways in JET},
+  journal = {Nuclear Fusion}
+}
+
+@article{Plyusnin2006,
+  doi = {10.1088/0029-5515/46/2/011},
+  url = {https://dx.doi.org/10.1088/0029-5515/46/2/011},
+  year = {2006},
+  month = {1},
+  volume = {46},
+  number = {2},
+  pages = {277},
+  author = {V.V. Plyusnin and V. Riccardo and R. Jaspers and B. Alper and V.G. Kiptily and J. Mlynar and S. Popovichev and E. de La Luna and F. Andersson and JET EFDA contributors},
+  title = {Study of runaway electron generation during major disruptions in JET},
+  journal = {Nuclear Fusion}
+}
+
+@article{Riccardo2010,
+  doi = {10.1088/0741-3335/52/12/124018},
+  url = {https://dx.doi.org/10.1088/0741-3335/52/12/124018},
+  year = {2010},
+  month = {11},
+  volume = {52},
+  number = {12},
+  pages = {124018},
+  author = {V. Riccardo and G. Arnoux and P. Cahyna and T. C. Hender and A. Huber and S. Jachmich and V. Kiptily and R. Koslowski and L. Krlin and M. Lehnen and A. Loarte and E. Nardon and R. Paprok and D. Tskhakaya and JET-EFDA contributors},
+  title = {JET disruption studies in support of ITER},
+  journal = {Plasma Physics and Controlled Fusion}
+}
+
+@article{Matthews2011,
+  doi = {10.1088/0031-8949/2011/T145/014001},
+  url = {https://dx.doi.org/10.1088/0031-8949/2011/T145/014001},
+  year = {2011},
+  month = {12},
+  volume = {2011},
+  number = {T145},
+  pages = {014001},
+  author = {G F Matthews and M Beurskens and S Brezinsek and M Groth and E Joffrin and A Loving and M Kear and M-L Mayoral and R Neu and P Prior and V Riccardo and F Rimini and M Rubel and G Sips and E Villedieu and P de Vries and M L Watkins and EFDA-JET contributors},
+  title = {JET ITER-like wall—overview and experimental programme*},
+  journal = {Physica Scripta}
 }
 
 %@ARTICLE{Article,
