--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -3,7 +3,7 @@
 
 Неотъемлемой особенностью токамака как системы удержания плазмы является то, что ограниченная плазма должна пропускать через себя значительный электрический ток. Объемные электроны являются носителями тока в термоядерной плазме в нормальных условиях работы токамака, но скорость электронного потока намного меньше, чем тепловые скорости электронов. Однако при некоторых условиях возникает ситуация, при которой существенная или даже большая часть тока плазмы переносится небольшой популяцией электронов с высокой надтепловой энергией. Основная причина возникновения такого явления заключается в том, что сила трения за счёт столкновений для быстрых электронов уменьшается с увеличением скорости. Электроны могут при этом переходить в режим неограниченного ускорения электрическим полем; находящиеся в таком режиме электроны называют убегающими. Убегающие электроны долгое время были предметом пристального внимания в исследованиях плазмы как по академическим, так и по практическим причинам. Они могут приводить к пробою газа в сильных электрических полях, в том числе и при атмосферных молниях, они могут присутствовать в событиях магнитного перезамыкания и могут генерироваться намеренно для создания пучков электронов высокой энергии.~\cite{Breizman2019}
 
-Столкновительные процессы для убегающих электронов играют намного меньшую роль, чем для основной массы электронов плазмы, поэтому распределение убегающих электронов по энергии существенно отличается от максвелловского. Ещё ранние теоретические исследования установили два механизма возникновения убегающих электронов: переход электронов из максвелловского хвоста в режим убегания и вторичный лавинный механизм, при котором за счёт столкновений популяция убегающих электронов может увеличиваться в геометрической прогрессии. Убегающие электроны повсеместно присутствуют в плазме во время электрического пробоя газа в самом начале разряда, но их ток обычно остается относительно небольшим к тому vjvtyne, когда плазма нагревается и её сопротивление падает, после чего они постепенно так или иначе исчезают. Завершение разряда в штатных режимах работы токамака обычно не вызывает повторного рождения убегающих электронов, однако если время отключения должно быть очень коротким в аварийной ситуации, то убегающие электроны во время гашения разряда могут появляться в достаточно большом количестве.~\cite{Breizman2019} На токамаке JET ток убегающих электронов в процессе срыва может достигать значений 1~МА и выше и составлять 70\% и выше от полного тока по плазме.~\cite{Smith2006} 
+Столкновительные процессы для убегающих электронов играют намного меньшую роль, чем для основной массы электронов плазмы, поэтому распределение убегающих электронов по энергии существенно отличается от максвелловского. Ещё ранние теоретические исследования установили два механизма возникновения убегающих электронов: переход электронов из максвелловского хвоста в режим убегания и вторичный лавинный механизм, при котором за счёт столкновений популяция убегающих электронов может увеличиваться в геометрической прогрессии. Убегающие электроны повсеместно присутствуют в плазме во время электрического пробоя газа в самом начале разряда, но их ток обычно остается относительно небольшим к тому моменту, когда плазма нагревается и её сопротивление падает, после чего они постепенно так или иначе исчезают. Завершение разряда в штатных режимах работы токамака обычно не вызывает повторного рождения убегающих электронов, однако если время отключения должно быть очень коротким в аварийной ситуации, то убегающие электроны во время гашения разряда могут появляться в достаточно большом количестве.~\cite{Breizman2019} На токамаке JET ток убегающих электронов в процессе срыва может достигать значений 1~МА и выше и составлять 70\% и выше от полного тока по плазме.~\cite{Smith2006} 
 На более крупных токамаках, таких как ИТЭР, следует ожидать ещё больших значений величины тока; так, согласно данным численного моделирования, величина тока убегающих электронов на токамаке ИТЭР в некоторых сценариях может превышать 10~МА.~\cite{Smith2006} При этом пучок убегающих электронов может повреждать конструктивные элементы термоядерных реакторов (рисунок~\ref{fig:electrons-wall}).~\cite{Bazylev2011}
 
 \begin{figure}[ht]
